--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.8.0",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-canvas": "^0.1.40",
@@ -24,6 +25,7 @@
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
     "@types/react": "^18.2.6",
+    "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
