--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.8.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-canvas": "^0.1.40",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-webview": "^13.10.5"
   },
   "devDependencies": {
@@ -24,7 +30,8 @@
     "@react-native/eslint-config": "0.74.86",
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.8",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
